<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">LunAdd</string>
    <string name="confirm">confirm</string>
    <string name="add">Add</string>
    <string name="cancel">Cancel</string>
    <string name="matched">Matched</string>
    <string name="timeup">Time Up</string>
    <string name="profile">profile</string>
    <string name="loading">Loading...</string>
    <string name="wait_response">Waiting...</string>
    <string name="remaining_time_default">Remaining Time: ~%1$dhr</string>
    <string name="error">Error...Try later! </string>
    <string name="photo">[Photo]</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>

    <string name="video_call">[Video Call]</string>
    <string name="leave_app">Press key back again to exit</string>
    <string name="default_name">Your Name</string>
    <string name="default_otherusername">Another People Name</string>
    <string name="delete_chat">Do you want to delete the chat?</string>
    <string name="delete">Delete</string>
    <string name="preferlanguage">Prefer Language</string>
    <string name="addpeople_push_content">People added</string>
    <string name="chat_end_title">Chatting end</string>
    <string name="chat_end_content">The chatting has ended. Add another people!</string>
    <string name="preferlanguage_default">Which language you want to use to chat?</string>
    <string name="notification">Notification Setting</string>
    <string name="language">Language Setting</string>
    <string name="updating">Updating</string>
    <string name="empty_name">Name is Empty</string>
    <string name="empty_language_list">Please choose at least one language</string>
    <string name="edit_name_title">Edit Name</string>
    <string name="about_title">About LunAdd</string>
    <string name="edit_preferlanguage_title">Choose Prefer Language</string>
    <string name="edit_language_title">Choose Language</string>
    <string name="edit_notification">Notification Setting</string>
    <string name="alarm_msg">Notification when message received</string>
    <string name="alarm_song">Song</string>
    <string name="alarm_vibrate">Vibrate</string>
    <string name="register_complete">Register Completed</string>
    <string name="register_fail">Register Fail</string>
    <string name="login_fail">Login Fail. Please Check your network.</string>
    <string name="permission_rejected">You reject the required permission.</string>
    <string name="about_show_version">Current Version: </string>
    <string name="authenticating">Authenticating...</string>
    <string name="addpost">Post</string>
    <string name="comment">Comment</string>
    <string name="add_comment">Reply...</string>
    <string name="wall">Wall</string>
    <string name="post_default">What are you thinking?</string>
    <string name="load_more_post">Click to load more post</string>

    <string name="duration_information">Select how long you want to chat (hr)</string>

    <string name="about_lunadd">LunAdd is an app for chatting with random people where you can search the people using the chosen prefer language and chat with them for 24 hours. All the data will be deleted when time up. \nContact Me:\n***</string>
    <string-array name="preferlanguage_array">
        <item>繁體中文</item>
        <item>简体中文</item>
        <item>English</item>
        <item>Español</item>
        <item>िन्दी或हिंदी</item>
        <item>Português </item>
        <item>bāṅlā </item>
        <item>ру́сский язы́к </item>
        <item>日本語</item>
        <item>Deutsch</item>
        <item>Bahasa Indonesia</item>
        <item>한국어</item>
        <item>తెలుగు</item>
        <item>मराठी Marāṭhī</item>
        <item>Tiếng Việt</item>
        <item>le français</item>
        <item>Italiano</item>
        <item>Türkçe</item>
        <item>العَرَبِيَّة‎ </item>
        <item>język polski</item>
        <item>မြန်မာဘာသာ</item>
        <item>ภาษาไทย</item>
        <item>Ελληνικά</item>
        <item>بهاس ملايو‎</item>
        <item>українська мова</item>
        <item>svenska</item>
        <item>српски srpski</item>
    </string-array>



    <string-array name="language_array">
        <item>中文(简体)</item>
        <item>中文(繁體)</item>
        <item>English</item>
    </string-array>

</resources>
