<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:toolbar="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorPrimary"
        toolbar:navigationIcon="@drawable/ic_arrow_back_white_24dp"
        toolbar:title="@string/edit_preferlanguage_title"
        toolbar:titleTextColor="@color/white"/>

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="match_parent" >



        <LinearLayout
            android:id="@+id/button_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:layout_alignParentBottom="true"
            style="?android:attr/buttonBarStyle"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_cancel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/cancel"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_weight="1"/>

            <Button
                android:id="@+id/btn_confirm"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/confirm"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_weight="1"/>
        </LinearLayout>

        <ListView
            android:id="@+id/listvew_language"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_above="@id/button_bar"
            android:layout_alignParentTop="true"
            />
    </RelativeLayout>

</LinearLayout>